[package]
name = "eth-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.18.0"
tokio = { version = "1.19.2", features = ["macros"] }
sled = "0.34.7"
serde = "1.0.138"
serde_json = "1.0.82"
clap = "3.2.8"
log = "0.4.17"
env_logger = "0.9.0"
open = "3.0.1"
chrono = "0.4.19"
